test_compiler/errors/e20.gm
Procedure foo (G: Graph, A: N_P<Int>(G))
{
    Foreach(n: G.Nodes)
    {
        G.A += n.A @n; // error?
    }
}
